# ship

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Justfile  LESSONS.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml
crates/facet-acp/: Cargo.toml
crates/facet-acp/examples/: chat.rs  smoke.rs
crates/facet-acp/src/: connection.rs  lib.rs  rpc.rs  schema.rs
crates/facet-acp/src/schema/: agent.rs  client.rs  content.rs  error.rs  ext.rs  plan.rs  tool_call.rs
crates/facet-acp/tests/: compare_wire.rs  wire_format.rs
crates/facet-mcp/: Cargo.toml
crates/facet-mcp/src/: context.rs  lib.rs  protocol.rs  server.rs  test_server.rs  tool_macro.rs  transport.rs
crates/facet-mcp/tests/: tool_macro.rs
crates/rusqlite-facet/: Cargo.toml
crates/rusqlite-facet/src/: lib.rs
crates/ship/: Cargo.toml
crates/ship-acp/: Cargo.toml
crates/ship-acp/src/: client.rs  driver.rs  fakes.rs  launcher.rs  lib.rs  mcp.rs
crates/ship-agent/: Cargo.toml
crates/ship-agent/src/: lib.rs  model_spec.rs  run.rs
crates/ship-agent/tests/: integration.rs
crates/ship-code/: Cargo.toml
crates/ship-code/src/: callbacks.rs  edit.rs  engine.rs  lib.rs  ops.rs  search.rs  snapshot.rs  structural.rs  symbols.rs  truncate.rs
crates/ship-code/src/snapshots/: ship_code__engine__tests__edit_find_replace_not_found.snap  ship_code__engine__tests__edit_invalid_line_range.snap  ship_code__engine__tests__edit_nonexistent_file.snap  ship_code__engine__tests__read_file_full.snap  ship_code__engine__tests__read_file_range.snap  ship_code__engine__tests__read_node_found.snap  ship_code__engine__tests__read_node_not_found_suggests.snap  ship_code__engine__tests__search_no_results_gives_hints.snap  ship_code__engine__tests__undo_snapshot_too_high.snap  ship_code__engine__tests__undo_snapshot_zero.snap  ship_code__engine__tests__undo_with_no_edits.snap
crates/ship-code/tests/: snapshot_tests.rs
crates/ship-code/tests/snapshots/: snapshot_tests__edit_delete_lines.snap  snapshot_tests__edit_find_replace_single.snap  snapshot_tests__edit_insert_lines.snap  snapshot_tests__edit_multiple_operations.snap  snapshot_tests__edit_replace_lines.snap  snapshot_tests__extract_symbols_server_rs.snap  snapshot_tests__extract_symbols_utils_rs.snap  snapshot_tests__find_all_errors.snap  snapshot_tests__find_session_impls.snap  snapshot_tests__search_symbol_constant.snap  snapshot_tests__search_symbol_enum.snap  snapshot_tests__search_symbol_function_by_name.snap  snapshot_tests__search_symbol_impl_block.snap  snapshot_tests__search_symbol_kind_qualified.snap  snapshot_tests__search_symbol_macro.snap  snapshot_tests__search_symbol_struct_by_name.snap  snapshot_tests__search_symbol_substring_fuzzy.snap  snapshot_tests__search_symbol_trait.snap  snapshot_tests__search_text_across_file_types.snap  snapshot_tests__search_text_exact_string.snap  snapshot_tests__search_text_invalid_regex_falls_back_to_literal.snap  snapshot_tests__search_text_no_matches.snap  snapshot_tests__search_text_regex_pattern.snap  snapshot_tests__search_text_scoped_to_path.snap  snapshot_tests__search_typescript_async.snap
crates/ship-core/: Cargo.toml
crates/ship-core/src/: acp_client.rs  acp_driver.rs  acp_launcher.rs  agent_presets.rs  fakes.rs  git_worktree.rs  hook_runner.rs  json_store.rs  lib.rs  mcp.rs  project_config.rs  project_registry.rs  session_manager.rs  session_naming.rs
crates/ship-core/tests/: agent_presets.rs  git_worktree.rs  json_store.rs  mcp_config.rs  project_config.rs  project_registry.rs  session_manager.rs
crates/ship-db/: Cargo.toml
crates/ship-db/migrations/: 001_initial.sql  002_topology.sql  003_blocks.sql  004_tasks.sql  005_task_stats.sql
crates/ship-db/src/: lib.rs  schema.rs  store.rs
crates/ship-frontend-impl/: Cargo.toml
crates/ship-frontend-impl/src/: lib.rs
crates/ship-github/: Cargo.toml
crates/ship-github/src/: lib.rs  types.rs
crates/ship-mcp/: Cargo.toml
crates/ship-mcp/src/: connection.rs  kagi.rs  lib.rs  util.rs
crates/ship-mcp/src/tools/: admiral.rs  captain.rs  code.rs  mate.rs  mod.rs  shared.rs
crates/ship-policy/: Cargo.toml  sailfish.toml
crates/ship-policy/src/: block.rs  delivery.rs  help.rs  identity.rs  lib.rs  mentions.rs  names.rs  prompts.rs  room.rs  routing.rs  sandbox.rs  task.rs  tests.rs  transitions.rs
crates/ship-policy/src/snapshots/: ship_policy__help__tests__full_help_admiral.snap  ship_policy__help__tests__hint_captain_no_task.snap  ship_policy__help__tests__hint_captain_review.snap  ship_policy__help__tests__hint_mate_working.snap  ship_policy__help__tests__wrong_tool_captain_merge_no_task.snap  ship_policy__sandbox__tests__op_denied_captain_working.snap  ship_policy__sandbox__tests__profile_captain_readonly.snap  ship_policy__sandbox__tests__profile_mate_working.snap  ship_policy__sandbox__tests__profile_with_exceptions.snap  ship_policy__tests__admiral_prompt.snap  ship_policy__tests__bounce_captain.snap  (+19 more)
crates/ship-policy/templates/: admiral.stpl  bounce.stpl  captain.stpl  mate.stpl  message_wrap.stpl
crates/ship-runtime/: Cargo.toml
crates/ship-runtime/src/: agent.rs  events.rs  lib.rs  room.rs  runtime.rs
crates/ship-runtime/tests/: integration.rs
crates/ship-server/: Cargo.toml  build.rs  tts_play.py  tts_worker.py
crates/ship-server/src/: admiral_mcp_server.rs  agent_discovery.rs  captain_mcp.rs  captain_mcp_proxy.rs  captain_mcp_server.rs  fake_ship.rs  kyutai_tts.rs  main.rs  mate_mcp_server.rs  message_templates.rs  prompt_templates.rs  ship_impl.rs  startup_probe.rs  transcriber.rs  worktree_tools.rs
crates/ship-server/templates/: admiral_bootstrap.stpl  captain_bootstrap.stpl  captain_resume.stpl  mate_task_preamble.stpl  summarizer_persona.stpl
crates/ship-service/: Cargo.toml
crates/ship-service/src/: lib.rs
crates/ship-tool-impl/: Cargo.toml
crates/ship-tool-impl/src/: lib.rs
crates/ship-types/: Cargo.toml
crates/ship-types/src/: lib.rs
crates/ship-voice/: Cargo.toml  tts_worker.py
crates/ship-voice/src/: lib.rs  tts.rs
crates/ship/src/: lib.rs  main.rs
crates/ship/tests/: integration.rs
(+242 files in other folders)
