[workspace]
members = [
  "crates/ship-types",
  "crates/ship-core",
  "crates/ship-service",
  "crates/ship-server",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ulid = "1"
futures-core = "0.3"
futures = "0.3"
facet = { version = "0.44.1", features = ["ulid"] }
figue = "2.0.0"
facet-json = "0.44.1"
fs-err = { version = "3", features = ["tokio"] }
roam = "7.3.0"
roam-codegen = "7.3.0"
roam-websocket = "7.3.0"
agent-client-protocol = { version = "0.9.5", features = ["unstable_session_usage", "unstable_session_model"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hyper-tungstenite = "0.17"
