[workspace]
members = [
  "crates/ship-acp",
  "crates/ship-git",
  "crates/ship-github",
  "crates/ship-types",
  "crates/ship-core",
  "crates/ship-service",
  "crates/ship-server",
  "xtask", "crates/ship-code",
  "crates/ship-voice",
  "crates/ship-db",
  "crates/ship-policy",
  "crates/ship-mcp",
  "crates/facet-mcp",
  "crates/facet-acp",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
camino = "1.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ulid = "1"
futures-core = "0.3"
futures = "0.3"
facet = { version = "0.44.1", features = ["ulid", "jiff02"] }
jiff = "0.2"
figue = "2.0.0"
facet-json = "0.44.1"
fs-err = { version = "3", features = ["tokio"] }
roam = "7.3.0"
roam-codegen = "7.3.0"
roam-websocket = "7.3.0"
agent-client-protocol = { version = "0.9.5", features = ["unstable_session_usage", "unstable_session_model", "unstable_session_resume"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hyper-tungstenite = "0.17"
eyre = "0.6"
