[package]
name = "ship-acp"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = { workspace = true }
chrono = { workspace = true }
ship-types = { path = "../ship-types" }
tokio = { version = "1", features = ["rt", "sync", "process", "fs", "io-util", "time"] }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = "0.3"
similar = "2"
base64 = "0.22"
tracing = { workspace = true }
fs-err = { workspace = true }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
