[package]
name = "ship-code"
version = "0.1.0"
edition.workspace = true

[dependencies]
facet = { workspace = true }
facet-json = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
similar = "2"
ship-git = { path = "../ship-git" }
tokio = { version = "1", features = ["process", "time"] }
grep = "0.4.1"
regex-syntax = "0.8"
tiktoken-rs = "0.9.1"
arborium-tree-sitter = "2.16.0"
arborium-rust = "2.16.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
insta = "1"
camino = "1"
