[package]
name = "ship-core"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
ship-types = { path = "../ship-types" }
agent-client-protocol = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
facet-json = { workspace = true }
fs-err = { workspace = true }
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "sync", "process", "fs", "io-util", "time"] }
tokio-util = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }
ulid = { workspace = true }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
ulid = { workspace = true }
