[package]
name = "ship-core"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
camino = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
ship-code = { path = "../ship-code" }
ship-git = { path = "../ship-git" }
ship-acp = { path = "../ship-acp" }
ship-policy = { path = "../ship-policy" }
ship-types = { path = "../ship-types" }
futures = { workspace = true }
futures-core = { workspace = true }
facet-json = { workspace = true }
fs-err = { workspace = true }
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "sync", "process", "fs", "io-util", "time"] }
async-trait = "0.1"
tracing = { workspace = true }
serde_json = "1"
facet = { workspace = true }
facet-styx = "2.0.0"
globset = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
ulid = { workspace = true }
