[package]
name = "ship-policy"
version = "0.1.0"
edition.workspace = true

[dependencies]
facet = { workspace = true }
jiff = { workspace = true }
rusqlite = { workspace = true }
strid = { path = "../../../strid/crates/strid" }
sailfish = "0.9"

[dev-dependencies]
insta = { version = "1.46.3", features = ["redactions"] }
