[package]
name = "ship-server"
version = "0.1.0"
edition = "2024"
autobins = false

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ship"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
facet = { workspace = true }
figue = { workspace = true }
hyper-tungstenite = { workspace = true }
futures-util = "0.3"
reqwest = { workspace = true }
roam = { workspace = true }
roam-websocket = { workspace = true }
ship-core = { path = "../ship-core" }
ship-service = { path = "../ship-service" }
ship-types = { path = "../ship-types" }
tokio = { workspace = true, features = ["signal", "sync", "process", "time", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
