[build-dependencies]
facet-styx = "2.0.0"
ship-types = { path = "../ship-types" }

[package]
name = "ship-server"
version = "0.1.0"
edition = "2024"
autobins = false
default-run = "ship"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ship"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
camino = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
facet = { workspace = true }
facet-json = { workspace = true }
figue = { workspace = true }
hyper-tungstenite = { workspace = true }
eyre = { workspace = true }
futures-util = "0.3"
reqwest = { workspace = true }
ulid = { workspace = true }
roam = { workspace = true }
roam-websocket = { workspace = true }
ship-core = { path = "../ship-core" }
ship-git = { path = "../ship-git" }
ship-service = { path = "../ship-service" }
ship-types = { path = "../ship-types" }
tokio = { workspace = true, features = ["signal", "sync", "process", "time", "net"] }
tokio-tungstenite = "0.26.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1"
rust-mcp-sdk = { version = "0.8.3", default-features = false, features = ["server", "stdio"] }
similar = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
whisper-cpp-plus = { version = "0.1.4", features = ["metal", "async", "tokio"] }
dirs-next = "2.0.0"
sailfish = "0.9"
cpal = "0.15"
silero-vad-rust = "6.2.1"
anyhow = "1"
