[package]
name = "ship-service"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
# TODO(dep.ship-types): add when service trait is defined
# TODO(dep.roam): add `roam` for Ship service trait and RPC transport bindings.
